14 Feb 2019
TAG GIT: BUILD25
+ added energy disperions in AG_expmapgen e AG_multi
+ added new spectral model in the AG_multi tool: LogParabola, PLExpCutOff, PLSuperExpCutOff. It is possible to use different integrators for spectal evaluation
+ AG_multi: added the possibility to use different minimizers: Minuit, Fumuli, Minuit2, GSL
+ AG_ap -> aperture photometry for AGILE
+ Li&Ma: AG_lm5, AG_lm6
+ blind search with Bayesian technique: agextspot-v2
+ Wavelet analysis of AGILE GRID data
+ Ellipse Matching tool

21 Nov 2017
TAG GIT: preBUILD25_iteration2-r5
Added new repository: AG_lm6,agextspot-v2
Updated download.sh and install.sh

19 Apr 2016
TAG GIT: preBUILD24_1

+ libagilesci: SphDistDeg function reworked using another more compact math solution.
+ libagilesci: GetRowCol function reworked to avoid infinite loop outside the map border.
+ libagilesci: Generate the contour fixing the gal and iso parameters before making the contour.
+ libagilesci: Report the fitting status and cts counts used.
+ libagilesci: Report the limits of flux, index, gal and iso parameters.
+ libagilesci: Report TT and MJD.
+ libagilesci: Fixed warnings and memory leaks.
+ agilesci1: Fix wrong buffers sizes, warnings and memory leaks.
+ agilesci1: Removed AG_expmapgenT5.
+ agilesci1: Use pid as identifier fo temporary filenames.
+ AG_expmapgen5: Use static buffers.
+ AG_expmapgen5: Do not use psi, it is uninitialized.
+ AG_multiterative5: Generates the fluxul map.
+ AG_multiterative5: Renamed GAL in GAS.

22 Dec 2015
TAG GIT: BUILD23

+ multi5: bug correction when the center of the map is the same of the source
+ multi5: .source extension for single result file
+ multi5: changes on html and single source result file
+ multiext5: validation for single map
+ multi5.rb, map.rb and iterative5.rb
+ AG_summapgen5: Sum cts maps into a single cts map, same for exposure maps.
Copy the source headers and update the summed ranges keywords for EMIN-EMAX, TSTART-TSTOP, FOVMIN-FOV.