@@ -3,14 +3,14 @@
 
 trap exit ERR
 
-TAG_PIL=v1.0.3
-TAG_WCS=v1.0.3
-TAG_LIBSCI=v2.1.4
-TAG_SCI1=v2.1.3
-TAG_SCRIPTS=v2.5.3
+TAG_PIL=v1.0.4
+TAG_WCS=v1.0.4
+TAG_LIBSCI=v2.2.0
+TAG_SCI1=v2.2.0
+TAG_SCRIPTS=v2.5.4
 TAG_AG_EXTSPOT=v1.4.2
 TAG_EM=v1.4.1
-TAG_WTOOLS=v1.0.0
+TAG_WTOOLS=v2.0.0
 
 git clone https://github.com/AGILESCIENCE/libagilepil.git
 cd libagilepil
