@@ -3,11 +3,12 @@ export AGILE=~/local.B25
 export AGILEPIPE=$AGILE/AGILEPIPE
 export CFITSIO=/opt/local
 export ROOTSYS=/opt/local
-export GSL=/opt/local
-export OPENCV=/opt/local
-export LD_LIBRARY_PATH=/usr/lib:/usr/lib64:$AGILE/lib:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=$AGILE/lib:$LD_LIBRARY_PATH
 export PATH=$AGILE/bin:$AGILE/scripts:$PATH
 export PFILES=$PFILES:$AGILE/share
+
+export GSL=/opt/local
+export OPENCV=/opt/loca
 
 export PATH_DATA="/AGILE_PROC3/"
 export PATH_RES="/ANALYSIS3/"
