@@ -1,3 +1,10 @@
+
+20 Sept 2022
+TAG GIT: BUILD25b0
++ c++17 version
++ new WTOOLS python
+
+
 14 Feb 2019
 TAG GIT: BUILD25
 + added energy disperions in AG_expmapgen e AG_multi
